# Rosetta

./: .editorconfig  .gitignore  README.md  pyproject.toml
api/: README.md  pyproject.toml
api/src/hmer_api/: __init__.py  evaluate.py  main.py  recognize.py  schemas.py
api/tests/: test_health.py
artifacts/: vocab_synth.json
docs/: datasets.md  roadmap.md  vision.md
docs/adr/: 0001-online-ink-input.md  0002-encoder-recurrent-vs-transformer.md  0003-custom-latex-tokenizer.md  0004-shared-ink-schema.md  0005-python-dependency-uv.md  0006-pluggable-heads.md
ml/: README.md  pyproject.toml
ml/configs/: base.yaml  mathwriting.yaml  overfit_crohme.yaml
ml/src/hmer_ml/: __init__.py  evaluate.py  infer.py  train.py
ml/src/hmer_ml/model/: __init__.py  decoder.py  encoder.py  heads.py  seq2seq.py
ml/src/hmer_ml/tokenizer/: __init__.py  latex_tokenizer.py
ml/src/hmer_ml/utils/: __init__.py  checkpoint.py  config.py
ml/tests/: test_smoke.py
schemas/: README.md  ink.schema.json  ink_example.json
scripts/: install_plugin.sh  serve_api.sh
web/: README.md  next.config.mjs  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: InkCanvas.tsx  LatexView.tsx  NotebookCanvas.tsx
web/lib/: api.ts  ink.ts
