[project]
name = "hmer-api"
version = "0.0.0"
description = "API FastAPI: tinta -> LaTeX (/recognize) e LaTeX -> resultado (/evaluate)."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "sympy>=1.12",          # /evaluate
    "hmer-ml",               # inferência (Recognizer) — resolvido pelo workspace uv
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]  # httpx p/ TestClient

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hmer_api"]
