[project]
name = "hmer-ml"
version = "0.0.0"
description = "HMER online: dados, tokenizer, modelo, treino, avaliação, inferência."
requires-python = ">=3.10"
dependencies = [
    # Núcleo. Versões deixadas em aberto no scaffold; fixar no lock ao instalar (uv).
    "torch>=2.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    # InkML é XML → stdlib xml.etree cobre o parsing (sem dep extra).
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hmer_ml"]
